--- a/frontend/htmls/index.html
+++ b/frontend/htmls/index.html
@@ -11,7 +11,7 @@
             You need to enable JavaScript to run this app.
         </noscript>
         <div id = "root"></div>
-        <script src = "../build/bundle.js"></script>
+        <script src = "../../build/bundle.js"></script>
     </body>
 
 
